06_envoy_validate_jws/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: service }
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                      providers:
                        workforce_provider:
                          issuer: workforceIdentity.example.com
                          audiences:
                          - apigateway.example.com
                          from_headers:
                          - name: "actor-token"
                            value_prefix: ""
                          forward: true
                          local_jwks:
                            inline_string: "{\"keys\":[{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\"APIGW-ES256\",\"crv\":\"P-256\",\"alg\":\"ES256\",\"x\":\"g3uF5OZrWsU6yKJhv0FQxhALlmNbw6_Wa9_exT3-eNA\",\"y\":\"lJbCP1oz0vDs6Dxd_3my5Ga5fLSXRDzQVbTTlt9pr98\"},{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\"custIDP-ES256\",\"crv\":\"P-256\",\"alg\":\"ES256\",\"x\":\"HmVjNgoTIECfvja3E7WZX2H1OzXtvDhD5_SSMXGYxZU\",\"y\":\"ugCW-AoKaSyNqIbyNUgRWMJ8WY6s2W78YI2LdVVTGcY\"},{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\ [...]
                        consumer_provider:
                          issuer: customerIdentity.example.com
                          audiences:
                          - apigateway.example.com
                          from_headers:
                          - name: "subject-token"
                            value_prefix: ""
                          forward: true
                          local_jwks:
                            inline_string: "{\"keys\":[{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\"APIGW-ES256\",\"crv\":\"P-256\",\"alg\":\"ES256\",\"x\":\"g3uF5OZrWsU6yKJhv0FQxhALlmNbw6_Wa9_exT3-eNA\",\"y\":\"lJbCP1oz0vDs6Dxd_3my5Ga5fLSXRDzQVbTTlt9pr98\"},{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\"custIDP-ES256\",\"crv\":\"P-256\",\"alg\":\"ES256\",\"x\":\"HmVjNgoTIECfvja3E7WZX2H1OzXtvDhD5_SSMXGYxZU\",\"y\":\"ugCW-AoKaSyNqIbyNUgRWMJ8WY6s2W78YI2LdVVTGcY\"},{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\ [...]
                        gateway_provider:
                          issuer: apigateway.example.com
                          audiences:
                          - apigateway.example.com
                          from_headers:
                          - name: "app-token"
                            value_prefix: ""
                          forward: true
                          local_jwks:
                            inline_string: "{\"keys\":[{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\"APIGW-ES256\",\"crv\":\"P-256\",\"alg\":\"ES256\",\"x\":\"g3uF5OZrWsU6yKJhv0FQxhALlmNbw6_Wa9_exT3-eNA\",\"y\":\"lJbCP1oz0vDs6Dxd_3my5Ga5fLSXRDzQVbTTlt9pr98\"},{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\"custIDP-ES256\",\"crv\":\"P-256\",\"alg\":\"ES256\",\"x\":\"HmVjNgoTIECfvja3E7WZX2H1OzXtvDhD5_SSMXGYxZU\",\"y\":\"ugCW-AoKaSyNqIbyNUgRWMJ8WY6s2W78YI2LdVVTGcY\"},{\"use\":\"sig\",\"kty\":\"EC\",\"kid\":\ [...]
                      rules:
                        - match:
                            prefix: /
                          requires:
                            requires_all:
                              requirements:
                                - provider_name: workforce_provider
                                - provider_name: consumer_provider
                                - provider_name: gateway_provider
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: ${SERVICE_NAME}
                  port_value: ${SERVICE_PORT}
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
